# ecglib

./: README.md
ecglib/: CMakeLists.txt  README.md
ecglib/build_aux/cmake/Modules/: FindECGLIB.cmake  add_component.cmake
ecglib/doc/: Doxyfile.in  ecglib.dox.in
ecglib/src/core/: CMakeLists.txt  ecglib.hpp
ecglib/src/core/doc/: overview.dox
ecglib/src/core/ecglib/: annotation.cpp  annotation.hpp  beat.cpp  beat.hpp  config.hpp  config.hpp.cmake  ecgdata.hpp  ecglib.hpp
ecglib/src/core/ecglib/detail/: detail.cpp  detail.hpp
ecglib/src/core/ecglib/util/: config.hpp  util.hpp
ecglib/src/delineators/twave/: CMakeLists.txt
ecglib/src/delineators/twave/ecglib/delineator/: twave.hpp
ecglib/src/delineators/twave/ecglib/delineator/twave/: delineate.cpp  delineate.hpp  delineateFinder.cpp  delineateFinder.hpp  generalstructure.hpp  processing.cpp  processing.hpp  twaveDelineator.cpp  twaveDelineator.hpp
examples/: FDAStudy1Comparison.Rmd  FilterEffect.Rmd  HOWTO.md  ISCE-JTpeak-Time.and.ER.Rmd  Makefile  README.md  ResultsExample.md  delineateall.sh  generatereport.R  getdbannotations.cpp  twavedelineatorphysionet.cpp  validate.Rmd  validation.csv
examples/filters/butterworth/: filter.hpp  simplebw.hpp
